# esp-camera-rs

./: Cargo.toml
examples/camera-example/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
examples/camera-example/src/: main.rs
src/: lib.rs
