[package]
name = "camera-example"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2021"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0.82"
esp-idf-svc = { version = "0.48", default-features = false, features = [
    "binstart",
    "std",
] }
esp-idf-sys = { version = "0.34.1" }
esp-camera-rs = { git = "https://github.com/MathiasPius/esp-camera-rs.git" }

[build-dependencies]
embuild = "0.31.3"
