[package]
name = "camera-example"
version = "0.1.1"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2021"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0.82"
esp-idf-svc = { version = "0.49.1", default-features = false, features = [
    "binstart",
    "std",
] }
esp-idf-sys = { version = "0.35.0" }
esp-camera-rs = { git = "https://github.com/MathiasPius/esp-camera-rs.git" }

[build-dependencies]
embuild = "0.32.0"
